# fizzbuzz

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
fizzbuzz/: game.py  greeting.py
fizzbuzz/scripts/: main.py
tests/: test_fizzbuzz.py  test_game.py  utils.py
