[tool.poetry]
name = "fizzbuzz"
version = "1.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "fizzbuzz" }
]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
ipython = "^8.3.0"
pytest = "^7.1.2"
wemake-python-styleguide = "^0.16.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fizzbuzz = 'fizzbuzz.scripts.main:main'
